# confluence-api

./: .env.example  .gitignore  README.md  pyproject.toml
confluence_api/: main.py
confluence_api/atlas/: confluence.py
confluence_api/utils/: create_datas.py  environments.py  inquirers.py
